# event_ood

./: .gitignore  CLAUDE.md  Colab.py  EXPERIMENT.md  Findings.md  HOW_TO_RUN.md  Ideas.md  README.md  read_clean_log.py  run_analysis_tests.py  run_full_benchmark.ps1  run_full_benchmark.sh  run_test_pipeline.ps1  run_test_pipeline.py  run_test_pipeline.sh  test_extract_to_analyse.py
Docs/: Findings.md  (+4 more)
HybridDetection/: .gitignore  LICENSE  README.md  pyproject.toml  test_gen1.sh  test_gen4.sh  train.py  train_gen1.sh  train_gen4.sh  validation.py
HybridDetection/callbacks/: custom.py
HybridDetection/config/: general.yaml  modifier.py  train.yaml  val.yaml
HybridDetection/config/dataset/: base.yaml  gen1.yaml  gen4.yaml
HybridDetection/config/experiment/gen1/: base.yaml  default.yaml  no_lstm.yaml
HybridDetection/config/experiment/gen4/: default.yaml
HybridDetection/config/model/: hybrid.yaml
HybridDetection/config/model/hybrid_yolox/: default.yaml
HybridDetection/data/genx_utils/: dataset_rnd.py  sequence_base.py  sequence_for_streaming.py
HybridDetection/development/: testing_blocks.py
HybridDetection/loggers/: wandb_logger.py
HybridDetection/models/detection/spiking_backbone/: ConvDownscale.py  __init__.py  attention.py  dwLSTM.py  network_blocks.py  spike_model.py  spike_model_no_lstm.py
HybridDetection/models/detection/yolox_extension/models/: build.py  detector.py  yolo_pafpn.py
HybridDetection/modules/: detection_hybrid.py
HybridDetection/modules/utils/: fetch.py
HybridDetection/validation_logs/lightning_logs/version_3/: metrics.csv
(+65 files in other folders)
