[project]
name = "faod-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bbox-visualizer>=0.2.2",
    "einops>=0.8.2",
    "h5py>=3.15.1",
    "hdf5plugin>=6.0.0",
    "hydra-core>=1.3.2",
    "ipdb>=0.13.13",
    "lovely-tensors>=0.1.21",
    "mmengine>=0.10.7",
    "numba>=0.63.1",
    "numpy==1.26.3",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "openmim>=0.3.9",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pycocotools>=2.0.11",
    "pykeops>=2.3",
    "pytorch-lightning==1.8.6",
    "scikit-learn>=1.8.0",
    "spikingjelly>=0.0.0.0.14",
    "strenum>=0.4.15",
    "tabulate>=0.9.0",
    "tensorboardx>=2.6.4",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchdata==0.7.1",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "wandb>=0.16.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

